# wg-easier

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: auth.rs  clients.rs  config.rs  interface.rs  metrics.rs  mod.rs  session.rs  stats.rs
backend/src/db/: clients.rs  interfaces.rs  mod.rs  settings.rs  users.rs
backend/src/models/: client.rs  interface.rs  mod.rs  settings.rs  user.rs
backend/src/templates/: client.conf.tera
backend/src/wireguard/: interface.rs  keys.rs  mod.rs  nat.rs  peers.rs
docs/: api.md  architecture.md  migration.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ClientModal.tsx  ClientTable.tsx  Navbar.tsx
frontend/src/hooks/: useAuth.ts  useClients.ts  useInterface.ts  useStats.ts
frontend/src/i18n/: de.json  en.json  index.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx
infra/: Dockerfile  docker-compose.yml
