[package]
name = "wg-easy-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wg-easy-rs"
path = "src/main.rs"

[dependencies]
# HTTP & runtime
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Cookie handling (for sessions)
cookie = "0.18"

# WireGuard / netlink
wireguard-control = "1"
rtnetlink = "0.14"
futures = "0.3"

# NAT (nftables)
rustables = "0.8"

# Crypto / keys
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
base64 = "0.22"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

# Auth & security
bcrypt = "0.16"
totp-rs = { version = "5", features = ["qr"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WireGuard .conf template rendering
tera = "1"

# QR code
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ipnet = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
